--- a/Assignments.One/Assignments.One.fsproj
+++ b/Assignments.One/Assignments.One.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="../Assignments.Six/StateMonad.fsi" />
     <Compile Include="Program.fs" />
     <Compile Include="Program.fs" />
     <Compile Include="Program.fs" />
